fix: slightly improve alerts visibility

--- a/src/Web/assets/typography.css
+++ b/src/Web/assets/typography.css
@@ -8,14 +8,14 @@
 	}
 
 	.alert {
-		@apply my-4 relative overflow-hidden w-full rounded-md p-4 flex gap-2.5 items-start text-(--ui-text-highlighted) bg-(--ui-bg-elevated)/50 ring ring-inset ring-(--ui-border-accented);
+		@apply my-4 relative overflow-hidden w-full rounded-md p-4 flex gap-2.5 items-start text-(--ui-text-highlighted) bg-(--ui-bg-elevated)/50 ring ring-inset ring-(--ui-border);
 
 		&.alert-warning {
-			@apply bg-(--ui-warning)/10 text-(--ui-warning) ring-(--ui-warning)/25;
+			@apply bg-(--ui-warning)/10 text-(--ui-warning) ring-(--ui-warning)/25 [--tw-prose-links:var(--ui-warning)];
 		}
 
 		&.alert-success {
-			@apply bg-(--ui-success)/10 text-(--ui-success) ring-(--ui-success)/25;
+			@apply bg-(--ui-success)/10 text-(--ui-success) ring-(--ui-success)/25 [--tw-prose-links:var(--ui-success)];
 		}
 
 		div.alert-wrapper {
